pamc/src/tests/sample_code/should_fail/type_check/arity_mismatch/fun.ph
type U {
    .U: U,
}

let foo = fun bar_(x: U): U {
    U.U
}(U.U, U.U);
